# raider-vm

./: README.md  pyproject.toml
scripts/: script_assignment_show.rd  script_if.rd  script_loop.rd  script_loop_incr.rd  script_operations.rd
scripts/bytecode/: script_assignment_show.raided  script_if.raided  script_loop.raided  script_loop_incr.raided
src/: raider.py
src/compiler/: commands.py  commands_config.yml  compiler.py
src/vm/: utils.py  vm.py
